# Stellar2D

./: .gitignore  Cargo.toml  build.rs  resources.rc
src/: main.rs
src/features/Scene/hooks/: useInput.tsx
src/libs/rendering/: index.tsx  types.tsx  useTexture.tsx
src/utils/: logger.rs  time.rs
src/window/win/: instance.rs  mod.rs  paint.rs  resource.rs  window.rs  window_manager.rs
