[package]
name = "Stellar2D"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
windows = { version = "0.56.0", features = ["Win32_Graphics_Gdi", "Win32_System_LibraryLoader"] }
[target.'cfg(windows)'.dependencies]
windows = { version = "0.56.0", features = ["Win32_UI_WindowsAndMessaging"] }
[target.'cfg(unix)'.dependencies]
xcb = "1.4.0"
